metallb/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: metallb-system
spec:
  finalizers:
    - kubernetes
