metallb/base/deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: metallb-system
  name: speaker
spec:
  template:
    spec:
      containers:
      - name: speaker
        image: quay.io/cybozu/metallb:0.9.3.1
        imagePullPolicy: IfNotPresent
        command: ["/speaker"]
        securityContext:
          capabilities:
            add: []
        resources:
          limits:
            cpu: null
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: metallb-system
  name: controller
  labels:
    app.kubernetes.io/name: metallb
    app.kubernetes.io/component: controller
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: controller
        image: quay.io/cybozu/metallb:0.9.3.1
        imagePullPolicy: IfNotPresent
        command: ["/controller"]
        resources:
          limits:
            cpu: null
